--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.1",
     "@google-cloud/recaptcha-enterprise": "^5.8.0",
     "aos": "^2.3.4",
     "dotenv": "^16.4.5",
