--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "swiper": "^6.8.4"
   },
   "devDependencies": {
     "eslint": "^8",
