--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-svg-worldmap": "^2.0.0-alpha.16",
     "swiper": "^6.8.4"
   },
   "devDependencies": {
