--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.4.5",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
-    "next": "14.2.3",
+    "next": "^15.1.6",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
@@ -24,7 +24,7 @@
     "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-svg-worldmap": "^2.0.0-alpha.16",
-    "swiper": "^6.8.4"
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
