--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
@@ -17,6 +18,7 @@
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "next": "^15.1.6",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
