--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,12 @@
       {
         "link-name": "off"
       }
+    ],
+    "axe/aria": [
+      "default",
+      {
+        "aria-valid-attr-value": "off"
+      }
     ]
   }
 }
