--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@google-cloud/recaptcha-enterprise": "^5.8.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^12.10.5",
     "mongodb": "^6.6.1",
     "mongoose": "^8.3.4",
     "next": "^15.1.6",
