--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,29 +12,24 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.1",
+    "@fortawesome/react-fontawesome": "^3.1.1",
     "@google-cloud/recaptcha-enterprise": "^5.8.0",
-    "dotenv": "^16.4.5",
     "framer-motion": "^12.10.5",
     "mongodb": "^6.6.1",
-    "mongoose": "^8.3.4",
     "next": "^15.1.6",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
-    "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.17.0",
-    "react-svg-worldmap": "^2.0.0-alpha.16",
-    "swiper": "^11.2.1"
+    "react-svg-worldmap": "^2.0.0-alpha.16"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.2",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^15.5.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
