--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@google-cloud/recaptcha-enterprise": "^5.8.0",
     "framer-motion": "^12.10.5",
+    "lucide-react": "^0.563.0",
     "mongodb": "^6.6.1",
     "next": "^15.1.6",
     "next-sitemap": "^4.2.3",
